# flextrain

./: .gitignore  README.md  pyproject.toml  requirements.txt
examples/gpt2_training/: config.yaml  model.py  train_gpt2.py
flextrain/: __init__.py
flextrain/api/: server.py
flextrain/checkpoint/: __init__.py  manager.py  storage.py
flextrain/cli/: main.py
flextrain/config/: __init__.py  base.py  checkpoint.py  distributed.py  elastic.py  loader.py  training.py
flextrain/core/: __init__.py  data_loader.py  ddp_wrapper.py  fsdp_wrapper.py  trainer.py
flextrain/elastic/: __init__.py  manager.py
flextrain/fault_tolerance/: __init__.py  handler.py
flextrain/tracking/: __init__.py  metrics.py
scripts/: benchmark.py  test_local.sh
tests/: __init__.py
tests/unit/: test_checkpoint.py  test_config.py  test_model.py  test_tracking.py
